Nav linklerine href yönlendirmesi eklendi

--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
             <div class="collapse navbar-collapse" id="nvbCollapse">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Anasayfa</a>
+                        <a href="#headerSection" class="nav-link">Anasayfa</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Hakkımızda</a>
+                        <a href="#features" class="nav-link">Hakkımızda</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Çalışmalarımız</a>
+                        <a href="#portfolio" class="nav-link">Çalışmalarımı</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">İletişim</a>
+                        <a href="#contact" class="nav-link">İletişim</a>
                     </li>
                 </ul>
             </div>
