Gerekli düzenlemeler ve geçiş için js kütüphanesi eklendi

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <a href="#features" class="nav-link">Hakkımızda</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#portfolio" class="nav-link">Çalışmalarımı</a>
+                        <a href="#portfolio" class="nav-link">Çalışmalarımız</a>
                     </li>
                     <li class="nav-item">
                         <a href="#contact" class="nav-link">İletişim</a>
@@ -501,7 +501,11 @@
     <script src="js/popper.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.js"></script>
     <script type="text/javascript" src="js/lightbox.js"></script>
+    <script type="text/javascript" src="js/smooth-scroll.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
+    <script>
+	var scroll = new SmoothScroll('a[href*="#"]');
+    </script>
 </body>
 
 </html>
